--- a/BestRestaurants/Views/Cuisine/UpdateForm.cshtml
+++ b/BestRestaurants/Views/Cuisine/UpdateForm.cshtml
@@ -5,5 +5,5 @@
 <form action="/cuisines/@Model.Id/update" method="post">
 <label for="newName">New name: </label>
 <input type="text" id="newName" name="newName" value=@Model.Name>
-<button type="submit">Update</button>
+<button type="submit" class="btn btn-success">Update</button>
 </form>
