--- a/BestRestaurants/Views/Cuisine/Details.cshtml
+++ b/BestRestaurants/Views/Cuisine/Details.cshtml
@@ -3,5 +3,40 @@
 }
 
 <h3>List of restaurants which serve @Model.Name</h3>
+<hr />
 
+<form action="/cuisines/@Model.Id/restaurants" method="post">
+  <label for="restaurant_name">Add a Restaurant</label>
+  <input type="text" name="restaurant_name" id="restaurant_name" />
+  <label for="restaurant_rating">Give a Rating</label>
+  <input type="number" name="restaurant_rating" id="restaurant_rating" />
+  <button type="submit" class="btn btn-info">Add</button>
+</form>
+<hr />
+<h3>List of restaurants</h3>
+
+<table class = "table table-hover">
+  <thead>
+      <th class="col-md-3">Name</th>
+      <th class="col-md-3">Rating</th>
+      <th class="col-md-3">Edit</th>
+      <th class="col-md-3">Delete</th>
+  </thead>
+  <tbody>
+
+  @foreach (var restaurant in @Model.GetRestaurants())
+  {
+  <tr>
+    <td class="col-md-3">@restaurant.Name</td>
+    <td class="col-md-3">@restaurant.Rating</td>
+    <td class="col-md-3"><a href="/cuisines/@Model.Id/restaurants/@restaurant.Id/update" class="btn btn-info">Edit</a></td>
+    <td class='col-md-3'>
+      <form action="/cuisines/@Model.Id/restaurants/@restaurant.Id/delete" method="post">
+        <button class='btn btn-danger'>Delete</button>
+      </form>
+    </td>
+  </tr>
+  }
+  </tbody>
+</table>
 <a href="/cuisines" class="btn btn-secondary">Back to the cuisine list</a>
